k8s/k8s-network/payment-processor.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: payment-processor
    role: api
  name: payment-processor
spec:
  containers:
    - image: nginx
      name: payment-processor
      ports:
        - containerPort: 80
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
