k8s/k8s-network/network-policy-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: payment-processor
      role: api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: coffeeshop
